@@ -3,9 +3,9 @@ package com.examle.sikmogilbackend.record.Calendar.application;
 import com.examle.sikmogilbackend.member.application.MemberService;
 import com.examle.sikmogilbackend.member.domain.Member;
 import com.examle.sikmogilbackend.member.domain.repository.MemberRepository;
-import com.examle.sikmogilbackend.member.exception.ExistsNickNameException;
 import com.examle.sikmogilbackend.member.exception.MemberNotFoundException;
 import com.examle.sikmogilbackend.record.Calendar.api.dto.CalendarDTO;
+import com.examle.sikmogilbackend.record.Calendar.api.dto.CalendarResDto;
 import com.examle.sikmogilbackend.record.Calendar.api.dto.FindCalendarByDateDTO;
 import com.examle.sikmogilbackend.record.Calendar.api.dto.MainCalendarDTO;
 import com.examle.sikmogilbackend.record.Calendar.api.dto.WeekWeightDTO;
@@ -16,15 +16,16 @@ import com.examle.sikmogilbackend.record.WorkoutLog.domain.WorkoutList;
 import com.examle.sikmogilbackend.record.dietLog.api.dto.DietLogInPictureDTO;
 import com.examle.sikmogilbackend.record.dietLog.application.DietLogService;
 import com.examle.sikmogilbackend.record.dietLog.domain.DietLog;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.hibernate.Hibernate;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
+import com.examle.sikmogilbackend.record.dietLog.domain.DietPicture;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
 @Service
@@ -39,25 +40,39 @@ public class CalendarService {
     private final MemberService memberService;
 
     @Transactional
-    public List<CalendarDTO> findByMemberIdCalendar (String email) {
+    public List<CalendarResDto> findByMemberIdCalendar(String email) {
         log.info("findByMemberIdCalendar ");
-        log.info("email = "+email);
+        log.info("email = " + email);
 
         Member member = memberRepository.findByEmail(email).orElseThrow(MemberNotFoundException::new);
         List<Calendar> calendars =
                 calendarRepository.findByMember(member);
 
         return calendars.stream()
-                .map(Calendar::toDTO)
-                .collect(Collectors.toList());
+                .map(c -> CalendarResDto.builder()
+                        .diaryDate(c.getDiaryDate())
+                        .diaryText(c.getDiaryText())
+                        .diaryWeight(c.getDiaryWeight())
+                        .workoutList(c.getWorkoutLists().stream()
+                                .map(WorkoutList::toDTO)
+                                .findFirst()
+                                .orElse(null)
+                        )
+                        .dietPicture(c.getDietPictures().stream()
+                                .map(DietPicture::toDTO)
+                                .findFirst()
+                                .orElse(null)
+                        )
+                        .build())
+                .toList();
+
     }
 
 
-
     @Transactional
-    public MainCalendarDTO searchWeekWeightAndTargetWeight (String email) {
+    public MainCalendarDTO searchWeekWeightAndTargetWeight(String email) {
         log.info("searchWeekWeightAndTargetWeight ");
-        log.info("email = "+email);
+        log.info("email = " + email);
 
         Member member = memberRepository.findByEmail(email).orElseThrow(MemberNotFoundException::new);
         List<Calendar> calendars =
@@ -66,43 +81,47 @@ public class CalendarService {
                 .map(Calendar::toWeekDTO)
                 .collect(Collectors.toList());
 
-        log.info("sort = "+weekWeights.toString());
+        log.info("sort = " + weekWeights.toString());
 
-        Collections.sort( weekWeights, (o1, o2) -> o2.date().compareTo(o1.date()));
+        Collections.sort(weekWeights, (o1, o2) -> o2.date().compareTo(o1.date()));
 
-        log.info("sort = "+weekWeights.toString());
-
+        log.info("sort = " + weekWeights.toString());
 
         return MainCalendarDTO.builder()
                 .createDate(member.getCreateDate())
                 .targetDate(member.getTargetDate())
                 .targetWeight(member.getTargetWeight())
                 .weight(member.getWeight())
-                .weekWeights(weekWeights.size() < 7?weekWeights:weekWeights.subList(0,7))
+                .weekWeights(weekWeights.size() < 7 ? weekWeights : weekWeights.subList(0, 7))
                 .build();
     }
 
     @Transactional
-    public FindCalendarByDateDTO findCalendarByDateInDietLogAndWorkoutList(String email, String diaryDate){
+    public FindCalendarByDateDTO findCalendarByDateInDietLogAndWorkoutList(String email, String diaryDate) {
         Calendar calendar = findCalendarByDiaryDate(email, diaryDate);
 
         List<DietLog> dietLogs = dietLogService.findByMemberIdDietLogInPicture(email);
 
-
         List<DietLogInPictureDTO> dietLogInPictureDTOs =
                 dietLogs.stream()
                         .map(DietLog::toPictureDTO)
-                        .collect(Collectors.toList());
+                        .toList();
 
         Member member = memberService.findMember(email);
+
         FindCalendarByDateDTO findCalendarByDateDTO = FindCalendarByDateDTO.builder()
                 .canEatCalorie(member.getCanEatCalorie())
                 .diaryDate(calendar.getDiaryDate())
                 .diaryWeight(calendar.getDiaryWeight())
                 .diaryText(calendar.getDiaryText())
-                .dietLogInPictureDTOS(dietLogInPictureDTOs)
+                .dietPictureDTOS(
+                        Optional.ofNullable(calendar.getDietPictures())
+                                .orElseGet(ArrayList::new).stream()
+                                .map(DietPicture::toDTO)
+                                .toList())
                 .workoutLists(
-                        calendar.getWorkoutLists().stream()
+                        Optional.ofNullable(calendar.getWorkoutLists())
+                                .orElseGet(ArrayList::new).stream()
                                 .map(WorkoutList::toDTO)
                                 .collect(Collectors.toList())
                 )
@@ -111,10 +130,10 @@ public class CalendarService {
     }
 
     @Transactional
-    public Calendar findCalendarByDiaryDate (String email, String diaryDate) {
+    public Calendar findCalendarByDiaryDate(String email, String diaryDate) {
         log.info("findCalendarByDiaryDate ");
-        log.info("email = "+email);
-        log.info("diaryDate = "+diaryDate);
+        log.info("email = " + email);
+        log.info("diaryDate = " + diaryDate);
         Member member = memberRepository.findByEmail(email).orElseThrow(MemberNotFoundException::new);
 
         Calendar calendar = checkExistenceCalendar(member, diaryDate);
@@ -123,10 +142,10 @@ public class CalendarService {
     }
 
     @Transactional
-    public void UpdateCalendar (String email, CalendarDTO calendarDTO) {
+    public void UpdateCalendar(String email, CalendarDTO calendarDTO) {
         log.info("UpdateCalendar ");
-        log.info("email = "+email);
-        log.info("calendarDTO = "+calendarDTO.toString());
+        log.info("email = " + email);
+        log.info("calendarDTO = " + calendarDTO.toString());
 
         Member member = memberRepository.findByEmail(email).orElseThrow(MemberNotFoundException::new);
 
@@ -136,11 +155,11 @@ public class CalendarService {
     }
 
     @Transactional
-    public void updateWeight (String email, String date, Long weight) {
+    public void updateWeight(String email, String date, Double weight) {
         log.info("updateWeight ");
-        log.info("email = "+email);
-        log.info("date = "+date);
-        log.info("weight = "+weight);
+        log.info("email = " + email);
+        log.info("date = " + date);
+        log.info("weight = " + weight);
 
         Member member = memberRepository.findByEmail(email).orElseThrow(MemberNotFoundException::new);
 
@@ -150,12 +169,13 @@ public class CalendarService {
     }
 
     @Transactional
-    public void createCalendar (Member member, String diaryDate) {
+    public void createCalendar(Member member, String diaryDate) {
         log.info("createCalendar ");
-        log.info("member = "+member);
-        log.info("diaryDate = "+diaryDate);
-        if (calendarRepository.existsCalendarByMemberAndDiaryDate(member, diaryDate))
+        log.info("member = " + member);
+        log.info("diaryDate = " + diaryDate);
+        if (calendarRepository.existsCalendarByMemberAndDiaryDate(member, diaryDate)) {
             return;
+        }
         log.info("캘린더 생성@@@@@@@@@@@@@");
         calendarRepository.save(
                 Calendar.builder()
@@ -167,15 +187,16 @@ public class CalendarService {
     @Transactional
     private Calendar checkExistenceCalendar(Member member, String diaryDate) {
         log.info("checkExistenceCalendar ");
-        log.info("member = "+member);
-        log.info("diaryDate = "+diaryDate);
+        log.info("member = " + member);
+        log.info("diaryDate = " + diaryDate);
 
         try {
-            if (!calendarRepository.existsCalendarByMemberAndDiaryDate(member, diaryDate))
+            if (!calendarRepository.existsCalendarByMemberAndDiaryDate(member, diaryDate)) {
                 throw new CalendarNotFoundException();
+            }
         } catch (CalendarNotFoundException e) {
-            log.error("Error = "+e.getMessage());
-            log.error("diaryDate"+diaryDate);
+            log.error("Error = " + e.getMessage());
+            log.error("diaryDate" + diaryDate);
             createCalendar(member, diaryDate);
         }
         return calendarRepository.findByMemberAndAndDiaryDate(member, diaryDate);
